complate site header section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,37 @@
 </head>
 <body>
 
-  
+  <header class="site-header">
+    <div class="container site-header__container">
+      <a href="#" class="logo">
+        <img src="img/Cakes.png" width="67" height="18" alt="">
+      </a>
+      <nav class="site-navbar">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Наши торты</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link nav__link--active">Индивидуальный заказ</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Отзывы</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">О нас</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Как заказать</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="phone-number" href="tel:+79068999296">+7 906 899 92 96
+      </a>
+    </div>
+  </header>
 
 </body>
 </html>
