complate hero section

--- a/index.html
+++ b/index.html
@@ -41,5 +41,23 @@
     </div>
   </header>
 
+      <!-- MAIN -->
+
+                  <!-- HERO SECTION -->
+
+  <div class="container">
+    <div class="hero">
+      <h1 class="hero__title">Торты
+        на заказ</h1>
+        <p class="hero__text">Ручная работа</p>
+        <a class="hero__link" href="#">Выбрать торт</a>
+
+        <div class="about">
+          <p class="about__text about__text--ingrident">Натуральные ингредиенты</p>
+            <p class="about__text about__text--dastavka">Доставка бесплатно <br> при заказе от 2000 рублей*</p>
+        </div>
+    </div>
+  </div>
+
 </body>
 </html>
